web_interface/styles.css
h2 {
    font-family: Arial, sans-serif, Helvetica, sans-serif;
}

.table-container {
    overflow: auto;
    max-height: calc(100vh - 100px);
}

#dataTable {
    font-family: Arial, sans-serif, Helvetica, sans-serif;
    width: 100%;
    table-layout: fixed;
}

#dataTable thead {
    font-family: Arial, sans-serif, Helvetica, sans-serif;
    position: sticky;
    top: 0;
    background: white;
    z-index: 10;
}

.name {
    width: 20%;
}

.description {
    width: 45%;
}

.owner {
    width: 10%;
}

.stars, .forks, .size {
    text-align: right;
    width: 5%;
}

.created {
    text-align: center;
    width: 10%;
}

th, td {
    padding: 8px;
    border-bottom: 1px solid #ddd;
}

th {
    background-color: #f2f2f2;
    position: sticky;
    top: 0;
}

.column-key, .sort-button {
    display: inline-block;
}

.odd-row {
    background-color: #f2f2f2;
}

.even-row {
    background-color: #c3e3fd;
}

tr:hover {
    background-color: #f8c668;
}

div.sort-button:hover {
    cursor: pointer;
}

